--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -20,8 +20,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 870,
-"scroll_position": 863.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,10 +91,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
+"row": 30,
 "scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -161,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 49,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 293,
-"scroll_position": 280.0,
+"row": 222,
+"scroll_position": 214.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
-"folded_lines": Array[int]([194, 200]),
+"column": 30,
+"folded_lines": Array[int]([196, 202]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 19.0,
+"row": 258,
+"scroll_position": 227.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -231,12 +231,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
+"row": 13,
+"scroll_position": 6.0,
+"selection": true,
+"selection_from_column": 9,
+"selection_from_line": 13,
+"selection_to_column": 33,
+"selection_to_line": 13,
 "syntax_highlighter": "GDScript"
 }
 
@@ -333,11 +337,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 7,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 11.0,
+"row": 7,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
