--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://autoloads/signals.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/interactables/", "res://objects/interactables/portals/", "res://objects/interactables/containers/", "res://objects/character/", "res://maps/prototype/", "res://components/", "res://components/hud/", "res://classes/player_camera/", "res://autoloads/", "res://assets/textures/prototype/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://states/authentication/authentication.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://states/authentication/", "res://objects/interactables/", "res://objects/interactables/portals/", "res://objects/interactables/containers/", "res://objects/character/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://classes/player_camera/", "res://autoloads/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,16 +28,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://maps/prototype/maze.tscn", "res://components/hud/top_right_hud.tscn")
-current_scene="res://components/hud/top_right_hud.tscn"
+open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://maps/prototype/maze.tscn", "res://components/escape_menu/game/game_escape_menu.tscn")
+current_scene="res://components/escape_menu/game/game_escape_menu.tscn"
 center_split_offset=-217
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd", "res://autoloads/signals.gd", "res://components/tooltip/tooltip.gd", "res://components/hud/top_right_hud.gd"]
-selected_script="res://objects/character/player/player.gd"
+open_scripts=["res://states/authentication/authentication.gd", "res://states/game/game.gd", "res://components/escape_menu/game/game_escape_menu.gd", "res://autoloads/signals.gd"]
+selected_script="res://states/authentication/authentication.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=75
