--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -34,9 +34,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
-"selection": false,
+"row": 23,
+"scroll_position": 15.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 23,
+"selection_to_column": 9,
+"selection_to_line": 37,
 "syntax_highlighter": "GDScript"
 }
 
@@ -48,8 +52,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
-"scroll_position": 0.0,
+"row": 9,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -109,10 +113,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 41,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 82,
+"row": 85,
 "scroll_position": 70.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -165,11 +169,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 58,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 157,
-"scroll_position": 150.0,
+"row": 142,
+"scroll_position": 131.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
