--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 57,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 5.0,
+"row": 8,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 15.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 23,
-"selection_to_column": 9,
-"selection_to_line": 37,
+"row": 57,
+"scroll_position": 18.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
