--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -10,15 +10,15 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=304
-dock_hsplit_3=-304
+dock_hsplit_3=-385
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/interactables/", "res://objects/interactables/portals/", "res://objects/interactables/containers/", "res://objects/character/", "res://maps/prototype/", "res://components/", "res://components/escape_menu/game/", "res://components/chat_bubble/", "res://components/chat/", "res://classes/", "res://classes/player_camera/", "res://classes/message/", "res://autoloads/", "res://assets/textures/prototype/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://classes/player_camera/player_camera.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/escape_menu/game/", "res://components/chat_bubble/", "res://components/chat/", "res://classes/", "res://classes/player_camera/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,13 +30,13 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://components/chat/chat.tscn", "res://components/chat_bubble/chat_bubble.tscn")
 current_scene="res://components/chat/chat.tscn"
-center_split_offset=-218
+center_split_offset=-214
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://states/authentication/authentication.gd", "res://components/chat/chat.gd", "res://states/game/game.gd", "res://main.gd", "res://classes/message/message.gd", "res://autoloads/signals.gd"]
+open_scripts=["res://states/authentication/authentication.gd", "res://components/chat/chat.gd", "res://states/game/game.gd", "res://main.gd", "res://classes/message/message.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd", "res://autoloads/signals.gd"]
 selected_script="res://components/chat/chat.gd"
 open_help=[]
 script_split_offset=140
