--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -33,11 +33,12 @@ current_scene="res://components/chat/chat.tscn"
 center_split_offset=-214
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://states/authentication/authentication.gd", "res://components/chat/chat.gd", "res://states/game/game.gd", "res://main.gd", "res://classes/message/message.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd", "res://autoloads/signals.gd"]
-selected_script="res://classes/message/message.gd"
+selected_script="res://components/chat/chat.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=75
