--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -35,10 +35,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 50,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
+"row": 13,
 "scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -169,11 +169,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 8,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 20,
-"row": 31,
-"scroll_position": 24.0,
+"h_scroll_position": 0,
+"row": 132,
+"scroll_position": 125.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -197,11 +197,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 43,
-"scroll_position": 31.0,
+"row": 109,
+"scroll_position": 94.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -211,16 +211,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 73,
-"folded_lines": Array[int]([196, 202]),
+"column": 0,
+"folded_lines": Array[int]([196]),
 "h_scroll_position": 0,
-"row": 240,
-"scroll_position": 205.0,
-"selection": true,
-"selection_from_column": 38,
-"selection_from_line": 240,
-"selection_to_column": 73,
-"selection_to_line": 240,
+"row": 791,
+"scroll_position": 780.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -417,6 +413,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://components/chat_bubble/chat_bubble_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
