--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -197,12 +197,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 109,
-"scroll_position": 94.0,
-"selection": false,
+"row": 15,
+"scroll_position": 3.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 15,
+"selection_to_column": 30,
+"selection_to_line": 15,
 "syntax_highlighter": "GDScript"
 }
 
@@ -214,7 +218,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([196]),
 "h_scroll_position": 0,
-"row": 791,
+"row": 795,
 "scroll_position": 780.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -423,10 +427,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
