--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 37,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 411,
-"scroll_position": 403.0,
+"row": 287,
+"scroll_position": 281.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -433,7 +433,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
-"scroll_position": 68.0,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -447,7 +447,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 21,
-"scroll_position": 2.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 5,
 "selection_from_line": 21,
@@ -461,10 +461,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 8,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
+"row": 23,
 "scroll_position": 4.0,
 "selection": true,
 "selection_from_column": 0,
@@ -507,11 +507,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 141,
-"scroll_position": 116.0,
+"row": 91,
+"scroll_position": 79.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -535,15 +535,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 46,
-"scroll_position": 35.0,
-"selection": true,
-"selection_from_column": 12,
-"selection_from_line": 46,
-"selection_to_column": 18,
-"selection_to_line": 46,
+"row": 25,
+"scroll_position": 20.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
